@@ -1,4 +1,4 @@
-**** TECHNICAL REFERENCE AND INTERNAL FORMATS OF ULTIMA7 FILES $Revision: 1.14 $ ****
+**** TECHNICAL REFERENCE AND INTERNAL FORMATS OF ULTIMA7 FILES $Revision: 1.15 $ ****
 
 This is a list of all the U7 files I have studied while developing U7Wizard.
 You will find in here technical descriptions of format and content of the
@@ -481,20 +481,48 @@ WEAPONS.DAT:  weapons enumeration (jsf)
   ammo	    = int16 (shape type) Same as type if ammo not required.
   damage    = 1 byte, positive.
   flags0?   = 1 byte, bit flags:
+	      01 == returns?
 	      10 == fire?
 	      20 == magic?
+	      38 == breaks?
   type??      1 byte, guessing:
+	      0x01 == flamestrike.
 	      0x02 == flaming oil.
+	      0x04 == starburst
 	      0x18 == ???animals, serpentine dagger?????, torch.
+	      0x19 == glass sword.
+	      0x1a == dagger, hammer, knives
 	      0x1c == throwing axe.
+	      0x1e == slime
 	      0x20 == striking (scythe, rake, shovel, sword, staff,axe).
+	      0x21 == black sword, death scythe.
+	      0x24 == spear
+	      0x28 == corpser, halberd 2-handed sword, hoe, lightning
+		      whip
+	      0x36 == glimmer
+	      0x3e == sea serpent
 	      0x47 == gazer, reveal.
-	      0x86 == magic axe, cannon, boomerang,
+	      0x56 == light
+	      0x57 == ether.
+	      0x66 == blowgun, reaper, arrow, fireball, lightning,
+		      unlock magic
+	      0x67 == dragon breath, enchant missiles.
+	      0x86 == magic axe, cannon, boomerang, fire wand, sling,
+		      destroy trap, dispel field, lightning want
+	      0x8f == hawk
+	      0x97 == delayed explosion, heal
 	      0xa6 == bow, firedoom staff, magician's wand, firewand,
 		      sling, dispel-field, lightning-wand.
 	      0xc6 == fire bolt, triple crossbow.
+	      0xc7 == heal, sleep
 	      0xce == crossbow
-	      0xf8 == explosions.
+	      0xe6 == musket
+	      0xf6 == death vortex, paralyze, swordstrike
+	      0xf7 == death bolt, dispel magic, douse, energy mist,
+	              ignite, poison, telekinesis
+  	      0xf8 == explosions.
+	      0xfe == juggernaut hammer, curse, magic bow, light
+	      0xff == magic boomerang, charm
   unknown(2 bytes) Usually 4 and 7.
   flags1	= 1 byte, bit flags (special powers), meaning:
 		  0x01 == sleep
